--- a/cpuENG.html
+++ b/cpuENG.html
@@ -94,7 +94,8 @@
                         <th>Year of aparition</th>
                         <th>Technology</th>
                         <th>Architecture</th>
-                        <th>Number of coresh>
+                        <th>Number of cores</p>
+                        <th>Frequency</th>
                         <th>Integrated graphic card</th>
                         <th>Socket</th>
                     </tr>
